fix: Corrige swagger e queries
