# internal/buyers/controller/buyer_controller.go
@@ -67,7 +67,7 @@ func (c BuyerController) GetAll() gin.HandlerFunc {
 // @Success 200 {object} domain.Buyer
 // @Failure 400 {object} schemas.JSONBadReqResult{error=string}
 // @Failure 404 {object} schemas.JSONBadReqResult{error=string}
-// @Router /buyer/{id} [get]
+// @Router /buyers/{id} [get]
 func (c BuyerController) GetById() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 
